--- a/Roadmap/Week-1/Day-1/day1.html
+++ b/Roadmap/Week-1/Day-1/day1.html
@@ -45,6 +45,19 @@
      <img src="image.png" alt="image-1">
    </div>
 
+   <div>
+    <h5>This is an Experimental paragraph</h5>
+    <p>The text is <i>italic, </i> <b>bold, </b> <u>underlined, </u> <sub>subscripted, </sub> <sup>superscripted, </sup> <strong>strong, </strong> <em>emphasized, </em> <mark>marked, </mark> <ins>inserted, </ins> <del>deleted, </del> <small>small</small></p>
+    <q>If you are dreaming, make sure you dream Big</q>
+    <blockquote style="color: navy;">- A.P.J. Abdul Kalam</blockquote>
+    This page is created using <abbr title="HyperText Markup Language">HTML </abbr> and <abbr title="Cascading Style Sheets">CSS.</abbr><br>
+    <bdo dir="rtl">This text will be written from right to left</bdo>
+    <br>
+    <p style="background-color:greenyellow;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ab exercitationem? Exercitationem, expedita nisi hic rem optio consequatur officia veniam earum dolores non, numquam natus deserunt vel. Architecto, asperiores sit?</p>
+
+    <p style="color: brown; border: 1px palevioletred solid; padding: 10px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente eaque, ipsam inventore, eos minima tenetur maxime iusto nam iste ad aliquid laborum eum illum doloribus ea! Nihil assumenda ut nemo.</p>
+   </div>
+
     <section class="contact-form">
         <h2>Contact us</h2>
 
@@ -78,6 +91,14 @@
         <button>Submit</button>
     </form>
     </section>
+
+    <address>
+        Written by Harshita Salvi.<br>
+        Visit us at:<br>
+        Example.com<br>
+        Box 564, Disneyland<br>
+        USA
+    </address>
     
 </body>
 </html>
