Added tables and Lists

--- a/Roadmap/Week-1/Day-1/day1.html
+++ b/Roadmap/Week-1/Day-1/day1.html
@@ -92,6 +92,174 @@
     </form>
     </section>
 
+    <!-- Table -->
+     <div class="tables">
+        <table class="table-1" >
+            <caption>Training Details Table</caption>
+        <tr>
+            <th>Date</th>
+            <th>Topic</th>
+            <th>Hours</th>
+        </tr>
+        <tr>
+            <td>Day 1</td>
+            <td>HTML</td>
+            <td>4 hours</td>
+        </tr>
+        <tr>
+            <td>Day 2</td>
+            <td>CSS</td>
+            <td>5 hours</td>
+        </tr>
+        <tr>
+            <td>Day 3</td>
+            <td>Javascript</td>
+            <td>7 hours</td>
+        </tr>
+     </table>
+     <table class="table-2" >
+        <tr>
+            <th>Date</th>
+            <th>Topic</th>
+            <th>Hours</th>
+        </tr>
+        <tr>
+            <td>Day 1</td>
+            <td>HTML</td>
+            <td>4 hours</td>
+        </tr>
+        <tr>
+            <td>Day 2</td>
+            <td>CSS</td>
+            <td>5 hours</td>
+        </tr>
+        <tr>
+            <td>Day 3</td>
+            <td>Javascript</td>
+            <td>7 hours</td>
+        </tr>
+     </table>
+     <table class="table-3" >
+        <tr>
+            <th>Date</th>
+            <th>Topic</th>
+            <th>Hours</th>
+        </tr>
+        <tr>
+            <td>Day 1</td>
+            <td>HTML</td>
+            <td>4 hours</td>
+        </tr>
+        <tr>
+            <td>Day 2</td>
+            <td>CSS</td>
+            <td>5 hours</td>
+        </tr>
+        <tr>
+            <td>Day 3</td>
+            <td>Javascript</td>
+            <td>7 hours</td>
+        </tr>
+     </table>
+     <table class="table-4"  style="width: 100%;" >
+        <tr style="height: 30%">
+            <th>Date</th>
+            <th style="width: 60%;" colspan="2">Topic and Hours</th>
+        </tr>
+        <tr>
+            <td>Day 1</td>
+            <td>HTML</td>
+            <td>4 hours</td>
+        </tr>
+        <tr>
+            <td>Day 2</td>
+            <td>CSS</td>
+            <td>5 hours</td>
+        </tr>
+        <tr>
+            <td>Day 3</td>
+            <td>Javascript</td>
+            <td>7 hours</td>
+        </tr>
+     </table>
+     <table class="table-5"  style="width: 100%;" >
+        <tr style="height: 30%">
+            <th>Date</th>
+            <th style="width: 60%;">Topic</th>
+            <th>Hours</th>
+        </tr>
+        <tr>
+            <td rowspan="3">Day 1</td>
+            <td>HTML</td>
+            <td>4 hours</td>
+        </tr>
+        <tr>
+            <td>CSS</td>
+            <td>5 hours</td>
+        </tr>
+        <tr>
+            <td>Javascript</td>
+            <td>7 hours</td>
+        </tr>
+     </table>
+     </div>
+
+    <!-- Lists -->
+    <div class="lists">
+        <div>
+            <dl>
+                <dt><b>Integrity</b></dt>
+                <dd>- Integrity is the quality of being honest and having a consistent and uncompromising adherence to strong
+                    moral and ethical principles and values. </dd>
+            </dl>
+            <dl>
+                <dt><b>Adaptability </b></dt>
+                <dd>- Adaptability is essentially the ability to adjust your thoughts, behaviors, and emotions when
+                    circumstances change. It’s about staying flexible and resourceful instead of rigid when faced with
+                    uncertainty or novelty. </dd>
+            </dl>
+        </div>
+        <!-- Nested List -->
+        <ul>
+            <li>Integrity</li>
+            <li>Adaptability</li>
+            <li>Passion</li>
+            <li>Multi-tasking</li>
+            <ul>
+                <li>Integrity</li>
+                <li>Adaptability</li>
+                <li>Passion</li>
+                <li>Multi-tasking</li>
+            </ul>
+        </ul>
+        <ul style="list-style-type: square;">
+            <li>Integrity</li>
+            <li>Adaptability</li>
+            <li>Passion</li>
+            <li>Multi-tasking</li>
+            
+        </ul>
+        <ol>
+            <li>Integrity</li>
+            <li>Adaptability</li>
+            <li>Passion</li>
+            <li>Multi-tasking</li>
+        </ol>
+        <ol type="A">
+            <li>Integrity</li>
+            <li>Adaptability</li>
+            <li>Passion</li>
+            <li>Multi-tasking</li>
+        </ol>
+        <ol type="I">
+            <li>Integrity</li>
+            <li>Adaptability</li>
+            <li>Passion</li>
+            <li>Multi-tasking</li>
+        </ol>
+    </div>
+     
+
     <address>
         Written by Harshita Salvi.<br>
         Visit us at:<br>
