--- a/Roadmap/Week-1/Day-1/day1.html
+++ b/Roadmap/Week-1/Day-1/day1.html
@@ -63,13 +63,13 @@
 
     <form class="" action="">
         <label for="">Name</label>
-        <input type="text" placeholder="Enter your name"><br><br>
+        <input type="text" placeholder="Enter your name" required><br><br>
 
         <label for="">Email</label>
-        <input type="email" placeholder="Enter your email"><br><br>
+        <input type="email" placeholder="Enter your email" ><br><br>
 
         <label for="">Phone</label>
-        <input type="email" placeholder="Enter your phone number"><br><br>
+        <input type="email" placeholder="Enter your phone number" maxlength="10" minlength="10"><br><br>
 
         <label for="">City</label>
         <select name="" id="">
