Updated day 3 task

--- a/Roadmap/Week-1/Day 3/Task/day3new.html
+++ b/Roadmap/Week-1/Day 3/Task/day3new.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Layout</title>
+    <link rel="stylesheet" href="day3new.css">
 </head>
 <body>
-    
+    <nav>
+        <h1>Website</h1>
+        <div>
+            <a href="">Services</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+        </div>
+    </nav>
+
+    <aside class="sidebar">
+        <div>Links</div>
+        <div>More About</div>
+        <div>Payment</div>
+        <div>Support</div>
+        <div>Contact</div>
+    </aside>
+
+    <main>
+        <div class="data">
+            <div class="boxes">Heart</div>
+            <div class="boxes">Steps</div>
+            <div class="boxes">Sleep</div>
+            <div class="boxes">Calories</div>
+        </div>
+        <div class="analytics"></div>
+    </main>
+
+    <aside class="notifications">
+        <div><h5>Maria Doe</h5><p>Hello! Good Morning</p></div>
+        <div><h5>Maria Doe</h5><p>Hello! Good Morning</p></div>
+        <div><h5>Maria Doe</h5><p>Hello! Good Morning</p></div>
+    </aside>
+
+    <footer>
+        @Copyright - Your personal Health.com
+    </footer>
 </body>
 </html>
