Update UI and added review section

--- a/Roadmap/Week-1/Day 4/index.html
+++ b/Roadmap/Week-1/Day 4/index.html
@@ -355,6 +355,79 @@ Designed for strength building, fat loss, and long-term fitness transformation.<
     <button class="arrow">›</button>
   </div>
 </section>
+    
+
+    <section class="reviews">
+  <!-- Header -->
+  <div class="reviews-header">
+    <div class="reviews-title">
+      <h2>Reviews</h2>
+      <p>
+        Our members trust us<br>
+        and look forward to every workout
+      </p>
+    </div>
+
+    <div class="reviews-stat">
+      <span class="percentage">38%</span>
+      <p>of members bring their friends and family</p>
+    </div>
+  </div>
+
+  <!-- Cards -->
+  <div class="reviews-cards">
+    <!-- Card 1 -->
+    <div class="review-card">
+      <div class="review-user">
+        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="">
+        <div>
+          <h4>Sarah Williams</h4>
+          <span>Personal Training</span>
+        </div>
+      </div>
+      <p class="review-text">
+        This is definitely a 10/10 experience. The trainer explains every exercise
+        clearly and keeps me motivated. I’ve never felt more confident about my fitness.
+      </p>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="review-card">
+      <div class="review-user">
+        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="">
+        <div>
+          <h4>Alex Morgan</h4>
+          <span>Strength Training</span>
+        </div>
+      </div>
+      <p class="review-text">
+        I started almost from scratch. Within a few months, I gained strength,
+        improved stamina, and stayed consistent. The guidance is practical and effective.
+      </p>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="review-card">
+      <div class="review-user">
+        <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="">
+        <div>
+          <h4>Emily Carter</h4>
+          <span>Yoga & Flexibility</span>
+        </div>
+      </div>
+      <p class="review-text">
+        The atmosphere is calm and supportive. Sessions are well structured,
+        stress-free, and easy to follow. I feel stronger and more flexible than ever.
+      </p>
+    </div>
+  </div>
+
+  <!-- Button -->
+  <div class="reviews-action">
+    <button href="#" class="reviews-btn">Read all reviews</button>
+  </div>
+</section>
+
 
     <footer>
         <div class="yellow-div">
