Updated counter app and portfolio

--- a/Roadmap/Week-1/Day-1/New Day 1/portfolio.html
+++ b/Roadmap/Week-1/Day-1/New Day 1/portfolio.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=League+Spartan:wght@100..900&family=Lexend:wght@100..900&family=Outfit:wght@100..900&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Redressed&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=League+Spartan:wght@100..900&family=Lexend:wght@100..900&family=Outfit:wght@100..900&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Redressed&display=swap" 
+rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -24,9 +26,14 @@
 
     <section class="intro">
         <div class="text-intro">
-            <h2>Hi, I am </h2>
+            <p>Hi, I am </p>
             <span>Harshita Salvi</span>
-            <h3>A full-stack developer. I love to build modern, interactive and reponsive websites.</h3>
+            <p>A full-stack developer. I love to build modern, interactive and reponsive websites.</p>
+            <div class="icons">
+                <a href=""><img src="images/icons/instagram (1).png" alt=""></a>
+                <a href=""><img src="images/icons/linkedin.png" alt=""></a>
+                <a href=""><img src="images/icons/whatsapp.png" alt=""></a>
+            </div>
             <button class="intro-btn">Connect</button>
         </div>
         <div class="image">
@@ -35,7 +42,7 @@
     </section>
 
     <section class="about">
-        <h1>About</h1>
+        <h2>About</h2>
         <div class="about-flex">
             <div class="para">
             <p>I’m a passionate MERN Stack Developer, currently diving deep into Data Structures and Algorithms (DSA) to
@@ -47,7 +54,7 @@
         </div>
         
         <div class="skill-grid">
-            <h2>Skills</h2>
+            <h3>Skills</h3>
             <div class="container">
                 <p>HTML</p>
                 <div class="html-skill">80%</div>
@@ -72,7 +79,7 @@
     </section>
 
     <section class="projects">
-        <h1>Projects</h1>
+        <h2>Projects</h2>
         <div class="project-list">
             <div class="item-1 items">
                 <img src="images/Screenshot 2024-12-13 233140.png" alt="Raktamitra Project Screenshot" width="45%"
@@ -98,16 +105,15 @@
                     height="90%">
                 <div class="desc">
                     <h3>YourBuddy</h3>
-                    <p>Crowd sourcing platform for blood donation that connects blood donors with recipients in
-                        real-time.</p>
+                    <p>Empathetic friendly AI Chatbot for mental wellness with bi-lingual support and mood tracking. </p>
                     <h4>Tech Stack</h4>
                     <ul>
                         <li>React.js</li>
                         <li>Node.js</li>
                         <li>Express.js</li>
                         <li>MongoDB</li>
-                        <li>Leaflet</li>
-                        <li>Twilio</li>
+                        <li>Gemini API</li>
+                        <li>Fine Tuning</li>
                     </ul>
                     <p>Link: <a href="">naiwogfobvjsjejenb.com</a></p>
                 </div>
@@ -116,7 +122,7 @@
     </section>
 
     <section class="contact-form">
-        <h1>Contact</h1>
+        <h2>Contact</h2>
 
         <form class="" action="/submit">
             <fieldset>
@@ -132,7 +138,7 @@
                     title="Phone number must be 10 digits"><br><br>
 
                 <label for="">Message</label>
-                <textarea name="message" id="message" rows="3" placeholder="Enter your message"
+                <textarea name="message" id="message" rows="4" placeholder="Enter your message"
                     required></textarea><br><br>
 
                 <button>Submit</button>
