Updated week 1 tasks

--- a/Roadmap/Week-1/Day-1/New Day 1/portfolio.html
+++ b/Roadmap/Week-1/Day-1/New Day 1/portfolio.html
@@ -17,9 +17,9 @@ rel="stylesheet">
     <nav>
         <div class="title"><span>Portfolio</span></div>
         <div class="list">
-            <a href="">About</a>
-            <a href="">Project</a>
-            <a href="">Contact</a>
+            <a href="#about">About</a>
+            <a href="#projects">Project</a>
+            <a href="#contact">Contact</a>
             <p>Icon</p>
         </div>
     </nav>
@@ -41,16 +41,16 @@ rel="stylesheet">
         </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
         <h2>About</h2>
         <div class="about-flex">
             <div class="para">
-            <p>I’m a passionate MERN Stack Developer, currently diving deep into Data Structures and Algorithms (DSA) to
-            strengthen my problem-solving skills. I have a strong foundation in JavaScript, React, and backend
-            development and love building real-world projects that solve meaningful problems, including Raktamitra, a
-            blood donation platform. Apart from tech, I enjoy singing, writing, and cooking. My goal is to secure a
-            high-paying tech job, excel in problem-solving, and eventually start my own food business. Right now, I’m
-            focused on mastering full-stack development and DSA to build scalable and impactful applications.</p>
+            <p>
+                I’m a passionate MERN Stack Developer, currently diving deep into Data Structures and Algorithms (DSA) to strengthen my problem-solving skills. I have a strong foundation in JavaScript, React, and backend development and love building real-world projects solve meaningful problems, including Raktamitra, a blood donation platform. 
+            </p>
+            <p>
+                Apart from tech, I enjoy singing, writing, and cooking. My goal is to work on impactful projects, excel in problem-solving. Right now, I’m focused on mastering full-stack development and DSA to build scalable and impactful applications.
+            </p>
         </div>
         
         <div class="skill-grid">
@@ -78,7 +78,7 @@ rel="stylesheet">
         </div>
     </section>
 
-    <section class="projects">
+    <section class="projects" id="projects">
         <h2>Projects</h2>
         <div class="project-list">
             <div class="item-1 items">
@@ -86,8 +86,7 @@ rel="stylesheet">
                     height="90%">
                 <div class="desc">
                     <h3>Raktamitra</h3>
-                    <p>Crowd sourcing platform for blood donation that connects blood donors with recipients in
-                        real-time.</p>
+                    <p>Crowd sourcing platform for blood donation that connects blood donors with recipients in real-time.</p>
                     <h4>Tech Stack</h4>
                     <ul>
                         <li>React.js</li>
@@ -121,10 +120,10 @@ rel="stylesheet">
         </div>
     </section>
 
-    <section class="contact-form">
+    <section class="contact-form" id="contact">
         <h2>Contact</h2>
 
-        <form class="" action="/submit">
+        <form action="/submit">
             <fieldset>
                 <legend>Form</legend>
                 <label for="name">Name</label>
