--- a/Roadmap/Week-1/Day-1/day1.html
+++ b/Roadmap/Week-1/Day-1/day1.html
@@ -58,6 +58,7 @@
     <p style="color: brown; border: 1px palevioletred solid; padding: 10px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente eaque, ipsam inventore, eos minima tenetur maxime iusto nam iste ad aliquid laborum eum illum doloribus ea! Nihil assumenda ut nemo.</p>
    </div>
 
+    <!-- Contact Form -->
     <section class="contact-form">
         <h2>Contact us</h2>
 
@@ -92,7 +93,7 @@
     </form>
     </section>
 
-    <!-- Table -->
+    <!-- Tables -->
      <div class="tables">
         <table class="table-1" >
             <caption>Training Details Table</caption>
@@ -270,7 +271,7 @@
             <input type="checkbox">Volley Ball
             <input type="checkbox">Badminton
 
-            Radio Button : <input type="radio">Male <input type="radio">Female <br>
+            Radio Button : <input type="radio" name="gender">Male <input type="radio" name="gender">Female <br>
 
             Color : <input type="color"><br>
 
@@ -282,9 +283,10 @@
 
             Address : <input type="text" readonly placeholder="You can't write here"><br>
 
-            Search : <input type="search" name="" id="">
+            Search : <input type="search" name="" id=""><br>
 
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit"><br>
+            
             <input type="reset" value="Reset">
 
 
