--- a/Roadmap/Week-1/Day-1/New Day 1/portfolio.html
+++ b/Roadmap/Week-1/Day-1/New Day 1/portfolio.html
@@ -120,6 +120,27 @@ rel="stylesheet">
         </div>
     </section>
 
+    <section class="event-gallery">
+       <div>
+         <h2>Events Gallery</h2>
+         <p>Moments, meetups, <br> and milestones <br> — captured from events <br>and competitions.</p>
+       </div>
+        
+        <div class="frame">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.28.58 AM.jpeg" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.29.15 AM.jpeg" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.29.28 AM.jpeg" alt=""><img src="" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.29.30 AM (1).jpeg" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.29.30 AM.jpeg" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.29.54 AM.jpeg" alt=""><img src="" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.33.22 AM (1).jpeg" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.33.23 AM.jpeg" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.33.24 AM.jpeg" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.33.25 AM.jpeg" alt=""><img src="" alt="">
+            <img src="images/event-images/WhatsApp Image 2025-12-28 at 12.33.22 AM.jpeg" alt="">
+        </div>
+    </section>
+
     <section class="contact-form" id="contact">
         <h2>Contact</h2>
 
