--- a/Roadmap/Week-1/Day 4/index.html
+++ b/Roadmap/Week-1/Day 4/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="images/icons/—Pngtree—fitness logo logo_7771764.png" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=League+Spartan:wght@100..900&family=Lexend:wght@100..900&family=Outfit:wght@100..900&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Redressed&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
@@ -20,8 +21,8 @@
         <div class="nav-list">
             <a href="#">Home</a>
             <a href="">Services</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
             <a href="">+91 99990 77838</a>
         </div>
     </nav>
