Created calulator app

--- a/Roadmap/Week-1/Day 4/index.html
+++ b/Roadmap/Week-1/Day 4/index.html
@@ -45,7 +45,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
         <h2>Why Choose Us?</h2>
         <div class="about-mid">
             <h3>>1200 Users</h3>
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section class="working">
+    <section class="working" id="working">
         <h2>How Our Fitness Program Works</h2>
         <div class="content">
             <div class="boxes">
@@ -152,7 +152,7 @@
         
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <h2>Contact </h2>
         <p>Start your fitness journey now!</p>
         <form action="">
@@ -315,29 +315,27 @@ Designed for strength building, fat loss, and long-term fitness transformation.<
       <div class="trainer-card">
         <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Trainer">
         <div class="trainer-info">
-          <h3>Anna Williams</h3>
+          <h3>Alina Carter</h3>
           <p><strong>Experience:</strong> 10+ years</p>
           <p><strong>Education:</strong> Certified Personal Trainer (CPT)</p>
           <p><strong>Specialization:</strong> Weight loss & strength training</p>
         </div>
       </div>
 
-      <!-- Card 2 -->
       <div class="trainer-card">
         <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Trainer">
         <div class="trainer-info">
-          <h3>Alex Morgan</h3>
+          <h3>John Doe</h3>
           <p><strong>Experience:</strong> 12+ years</p>
           <p><strong>Education:</strong> Sports Science Graduate</p>
           <p><strong>Specialization:</strong> Functional fitness & mobility</p>
         </div>
       </div>
 
-      <!-- Card 3 -->
       <div class="trainer-card">
         <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="Trainer">
         <div class="trainer-info">
-          <h3>Emily Carter</h3>
+          <h3>Emily Fedrick</h3>
           <p><strong>Experience:</strong> 8+ years</p>
           <p><strong>Education:</strong> Yoga Alliance Certified</p>
           <p><strong>Specialization:</strong> Yoga & flexibility</p>
@@ -355,9 +353,8 @@ Designed for strength building, fat loss, and long-term fitness transformation.<
     </div>
     <button class="arrow">›</button>
   </div>
-</section>
+    </section>
     
-
     <section class="reviews">
         <div class="reviews-header">
             <div class="reviews-title">
@@ -423,7 +420,6 @@ Designed for strength building, fat loss, and long-term fitness transformation.<
         </div>
     </section>
 
-
     <footer>
         <div class="yellow-div">
             <div class="first">
@@ -444,7 +440,7 @@ Designed for strength building, fat loss, and long-term fitness transformation.<
                     <form action="">
                     <input type="text" placeholder="Name" required name="name"><br>
                     <input type="email" placeholder="Email" required><br>
-                    <input type="tel" placeholder="Phone Number" required><br>
+                    <input type="tel" placeholder="Phone Number" required pattern="^(\+91)?[0-9]{10}$"><br>
 
                     <input type="submit" value="Leave a Request" class="button">
                 </form>
