--- a/Roadmap/Week-1/Day 5/counterApp.html
+++ b/Roadmap/Week-1/Day 5/counterApp.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Counter App</h2>
-        <p>Count : <span id="count"></span></p>
+        <p>Count : <span id="count">1</span></p>
         <p id="msg"></p>
         <div class="internal-div">        
             <button class="decr" id="decr-btn">
