Added Throttling in Geolocation API call

--- a/Roadmap/Week-2/Day-3/index.html
+++ b/Roadmap/Week-2/Day-3/index.html
@@ -16,8 +16,10 @@
 
         <main class="content">
             <p>This is a small demo showing light/dark theme switching with persistence.</p>
-            <p>Try the button in the header to toggle theme; your choice is saved.</p>
-            <button onclick="getLocation()">Get Location</button>
+            <p>Try the button in the header to toggle theme.</p>
+            <br>
+            <h3>Applied Throttling in Geolocation API call</h3>
+            <button id="location-btn">Get Location</button>
             <div id="location-box"></div>
         </main>
 
