--- a/Roadmap/Week-2/Day-1/index.html
+++ b/Roadmap/Week-2/Day-1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,11 +13,11 @@
             <div class="display" id="display">
                 0
             </div>
-            <div class="num-pad">
+            <div class="num-pad" id="num-pad">
                 <button id="clear" >AC</button>
-                <button class="operator">D</button>
-                <button class="operator"><sup>+</sup>/ <sub>-</sub></button>
+                <button id="backspaceBtn">D</button>
                 <button class="operator">%</button>
+                <button class="operator">*</button>
 
                 <button class="num" value = "7">7</button>
                 <button class="num" value = "8">8</button>
